--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+/.idea
+/.svn
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+
 # Built application files
 *.apk
 *.ap_
